--- a/MahasiswaAppAbika/app/src/main/AndroidManifest.xml
+++ b/MahasiswaAppAbika/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.input.InputActivity"></activity>
+        <activity android:name=".ui.input.ActionActivity"></activity>
         <activity android:name=".ui.ProfileActivity" />
         <activity
             android:name=".ui.register.RegisterActivity"
@@ -29,7 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.main.MainActivity"/>
     </application>
 
 </manifest>
